Salario líquido, texto para insentos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
 
         <div id="resultados-container">
+            <p id="salarioLiquido"></p>
             <p id="resultado"></p>
             <p id="aliquota"></p>
         </div>
